# Local-mac-pii-mask-jp

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.py  docker-compose.yml  install.command  main.py  models.py  pyproject.toml  start.command  stop.command
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
bench/: compare_privacy_filter.py
bench/results/: ginza.json  pf.json
core/: layer1_regex.py  layer2_ner.py  layer3_llm.py  pipeline.py
docs/: README.md
docs/0_概要設計/: README.md  overview.md  pii_masker_design.md
docs/1_アーキテクチャ設計/: README.md  architecture.md  data-models.md
docs/2_詳細設計/: README.md  file-handlers.md  interfaces.md  pipeline.md
docs/3_設定・開発/: README.md  configuration.md  development.md  manual_test_results.md
file_handlers/: base.py  docx_handler.py  pptx_handler.py  xlsx_handler.py
mcp/: server.py
tests/: create_fixtures.py  test_file_handlers.py  test_layer1_regex.py  test_layer2_ner.py  test_layer3_llm.py  test_pipeline.py  test_ui.py
tests/fixtures/: sample_サービス申込書.docx  sample_営業報告.pptx  sample_売上データ_PIIなし.xlsx  sample_技術仕様書_PIIなし.docx  sample_新入社員研修.pptx  sample_業務委託契約書.docx  sample_社員名簿.xlsx  sample_議事録.docx  sample_顧客データ.xlsx
ui/: log_handler.py  streamlit_app.py
